# ideal

./: .gitignore  .hlint.yaml  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  cabal.project  flake.nix  ideal.cabal  package.yaml  treefmt.toml
.github/workflows/: ci.yml
ideal/: Cargo.toml
ideal/src/: cli.rs  main.rs
interpreter/: Cargo.toml
interpreter/src/: lib.rs
interpreter/src/error/: location.rs  mod.rs
interpreter/src/lexer/: mod.rs  token.rs
nix/: format.sh
src/: Ideal.hs  Main.hs
website/: .envrc  .gitignore  Cargo.toml  README.md  build.sh  default.nix  index.html  package.json  pnpm-lock.yaml  website.cabal
website/app/: Pregen.hs  Worker.hs
website/src/: main.rs
website/src/Ideal/: Website.hs
website/www/: index.js  worker.js
