cabal-version: 1.12
name:          ideal
version:       0.0.1
author:        Joona Piirainen
maintainer:    Joona Piirainen
copyright:     2024 Joona Piirainen
license:       MIT
license-file:  LICENSE
build-type:    Simple

library
  exposed-modules:  Ideal
  other-modules:    Paths_ideal
  hs-source-dirs:   src
  ghc-options:      -Wall -Wno-missing-pattern-synonym-signatures
  build-depends:
      base  >=4.17.2.1
    , text

  default-language: Haskell2010

executable ideal
  main-is:          bin/Main.hs
  other-modules:    Paths_ideal
  ghc-options:
    -Wall -Wno-missing-pattern-synonym-signatures -threaded -rtsopts
    -with-rtsopts=-N

  build-depends:
      base   >=4.17.2.1
    , ideal
    , text

  default-language: Haskell2010
