cabal-version: 3.0
name: website
version: 0.0.0.0
maintainer: Joona Piirainen <japiirainen@proton.me>
author: Joona Piirainen <japiirainen@proton.me>
extra-source-files: .commitrev

common common
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wunused-packages
    -Wredundant-constraints
    -Wno-name-shadowing

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Ideal.Website

  build-depends:
    base,
    ideal,
    text,
    miso,
    lucid,

executable website
  import: common
  main-is: Worker.hs
  hs-source-dirs: app
  ghc-options:
    -no-hs-main
    -optl-mexec-model=reactor
    "-optl-Wl,--export=hs_runWorker"

  build-depends:
    base,
    jsaddle-wasm,
    website,

  if !arch(wasm32)
    buildable: False

executable pregen
  import: common
  main-is: Pregen.hs
  hs-source-dirs: app
  build-depends:
    base,
    bytestring,
    jsaddle-wasm:js,
    website,
